refactor: Replace @Autowired with constructor injection for improved testability and maintainability