@@ -7,7 +7,6 @@ import java.time.Period;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
@@ -25,11 +24,14 @@ import com.quanlynhankhau.api.repository.NhanKhauRepository;
 @Service
 public class NhanKhauManagementService {
 
-    @Autowired
-    private NhanKhauRepository nhanKhauRepository;
+    private final NhanKhauRepository nhanKhauRepository;
 
-    @Autowired
-    private HoKhauRepository hoKhauRepository;
+    private final HoKhauRepository hoKhauRepository;
+
+    public NhanKhauManagementService(NhanKhauRepository nhanKhauRepository, HoKhauRepository hoKhauRepository) {
+        this.nhanKhauRepository = nhanKhauRepository;
+        this.hoKhauRepository = hoKhauRepository;
+    }
 
     /**
      * Lấy tất cả nhân khẩu với phân trang và các bộ lọc.
@@ -50,7 +52,7 @@ public class NhanKhauManagementService {
                 .filter(nk -> applyAgeFilter(nk, ageFilter))
                 .filter(nk -> applyGenderFilter(nk, genderFilter))
                 .filter(nk -> applyLocationFilter(nk, locationFilter))
-                .collect(Collectors.toList());
+                .toList();
 
         // Phân trang thủ công
         int start = (int) pageable.getOffset();
@@ -150,18 +152,13 @@ public class NhanKhauManagementService {
 
         int age = Period.between(nhanKhau.getNgaySinh(), LocalDate.now()).getYears();
 
-        switch (ageFilter) {
-            case "under18":
-                return age < 18;
-            case "18-35":
-                return age >= 18 && age <= 35;
-            case "36-60":
-                return age >= 36 && age <= 60;
-            case "over60":
-                return age > 60;
-            default:
-                return true;
-        }
+        return switch (ageFilter) {
+            case "under18" -> age < 18;
+            case "18-35" -> age >= 18 && age <= 35;
+            case "36-60" -> age >= 36 && age <= 60;
+            case "over60" -> age > 60;
+            default -> true;
+        };
     }
 
     /**
@@ -198,9 +195,7 @@ public class NhanKhauManagementService {
 
         // Lọc theo địa chỉ hộ khẩu
         if (nhanKhau.getHoKhau() != null && nhanKhau.getHoKhau().getDiaChi() != null) {
-            if (nhanKhau.getHoKhau().getDiaChi().toLowerCase().contains(locationFilterLower)) {
-                return true;
-            }
+            return nhanKhau.getHoKhau().getDiaChi().toLowerCase().contains(locationFilterLower);
         }
 
         return false;
